force-app/main/default/objects/List_Upload_Staging__c/List_Upload_Staging__c.object-meta.xml
<CustomObject>
    <label>List Upload Staging</label>
    <nameField>
        <displayFormat>LUS-{000000}</displayFormat>
        <label>List Upload Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Upload Staging</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>