force-app/main/default/objects/List_Upload_Staging__c/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <description>Use Email Domain to find Audience Affiliation</description>
    <formula>SUBSTITUTE( Email_Address__c , LEFT(Email_Address__c , FIND(&quot;@&quot;, Email_Address__c )), NULL)</formula>
    <inlineHelpText>Use Email Domain to find Audience Affiliation</inlineHelpText>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>