force-app/main/default/objects/List_Upload_Staging__c/fields/Field_Email_Matched_On__c.field-meta.xml
<CustomField>
    <fullName>Field_Email_Matched_On__c</fullName>
    <description>Which email field did Email Address find match in</description>
    <inlineHelpText>Which email field did Email Address find match in</inlineHelpText>
    <label>Field Email Matched On</label>
    <length>100</length>
    <type>Text</type>
</CustomField>