force-app/main/default/objects/List_Upload_Staging__c/fields/List_Upload__c.field-meta.xml
<CustomField>
    <fullName>List_Upload__c</fullName>
    <label>List Upload</label>
    <referenceTo>List_Upload__c</referenceTo>
    <relationshipLabel>List Upload Staging</relationshipLabel>
    <relationshipName>List_Upload_Staging</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>