force-app/main/default/objects/List_Upload_Staging__c/fields/Matched_Contact__c.field-meta.xml
<CustomField>
    <fullName>Matched_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to any Matched Contact from data loads</description>
    <inlineHelpText>Link to any Matched Contact from data loads</inlineHelpText>
    <label>Matched Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integration Staging</relationshipLabel>
    <relationshipName>Integration_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>