force-app/main/default/objects/List_Upload_Staging__c/fields/Offered_Organization__c.field-meta.xml
<CustomField>
    <fullName>Offered_Organization__c</fullName>
    <label>Offered Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>