force-app/main/default/objects/List_Upload_Staging__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error in Processing</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Delayed Processing</fullName>
            </value>
            <value>
                <fullName>Retry Delayed Processing</fullName>
            </value>
            <value>
                <fullName>Create New Contact</fullName>
            </value>
            <value>
                <fullName>Contact Matched</fullName>
            </value>
            <value>
                <fullName>Created New Contact</fullName>
            </value>
            <value>
                <fullName>Updated Current Contact</fullName>
            </value>
            <value>
                <fullName>Marketing Activity Created</fullName>
            </value>
            <value>
                <fullName>List Membership Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>